--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=learn
+
+# for mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=Smx@2025
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA config
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+
+# debug when data is show incorrectly for JPA
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# MyBatis Config (optional if you use XML mappers)
+mybatis.mapper-locations=classpath:mapper/**/.xml
+mybatis.type-aliases-package=com.cocosun.learn.model.students
+
+
+
+
