--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.sql.init.mode=always
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # MyBatis Config (optional if you use XML mappers)
-mybatis.mapper-locations=classpath:mapper/**/.xml
+mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.type-aliases-package=com.cocosun.learn.model.students
 
 
