--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.8</version> 
         </dependency>
+
+        <!-- Thymeleaf for MVC feature -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
