--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=learn
 
 # for mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Smx@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,7 +12,7 @@ spring.sql.init.mode=always
 
 # debug when data is show incorrectly for JPA
 # spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.format_sql=trues
 # logging.level.org.hibernate.SQL=DEBUG
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
