--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,10 @@ spring.sql.init.mode=always
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.type-aliases-package=com.cocosun.learn.model.students
 
+# Enable profiles, availiable value [dev, prod], details go the associate application-*.properties files
+spring.profiles.active=prod
+
+
 
 
 
