--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=learn
 
 # for mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Smx@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,6 +23,11 @@ mybatis.type-aliases-package=com.cocosun.learn.model.students
 
 # Enable profiles, availiable value [dev, prod], details go the associate application-*.properties files
 spring.profiles.active=prod
+
+# 这是 MySQL 连接报错，通常是因为你用的 MySQL 8 以上版本，连接字符串里没有配置允许公钥检索（Public Key Retrieval），
+# 导致客户端无法进行密码加密认证
+# allowPublicKeyRetrieval=true
+
 
 
 
