Practice security, add login page and logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.profiles.active=prod
 # 这是 MySQL 连接报错，通常是因为你用的 MySQL 8 以上版本，连接字符串里没有配置允许公钥检索（Public Key Retrieval），
 # 导致客户端无法进行密码加密认证
 # allowPublicKeyRetrieval=true
+spring.thymeleaf.cache=false
 
 
 
