--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,24 @@ spring.profiles.active=prod
 # allowPublicKeyRetrieval=true
 spring.thymeleaf.cache=false
 
+# application.properties
+spring.redis.host=localhost
+spring.redis.port=6379
+
+# Redis key prefix for JWT tokens
+jwt.redis.key.prefix=auth:jwt:
+
+# Redis key expiration in milliseconds (e.g., 2 hours)
+jwt.redis.ttl=7200000
+
+# JWT secret key (you can use a Base64 encoded string or a secure key)
+jwt.secret=my-very-secret-key-change-this-by-coco-sun
+
+# JWT expiration time in milliseconds (e.g., 2 hours)
+jwt.expiration.ms=7200000
+
+
+
 
 
 
