--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 # Redis key prefix for JWT tokens
-jwt.redis.key.prefix=auth:jwt:
+jwt.redis.key.prefix=learn.auth:jwt:
 
 # Redis key expiration in milliseconds (e.g., 2 hours)
 jwt.redis.ttl=7200000
@@ -44,6 +44,9 @@ jwt.secret=my-very-secret-key-change-this-by-coco-sun
 
 # JWT expiration time in milliseconds (e.g., 2 hours)
 jwt.expiration.ms=7200000
+
+# Name of the HttpOnly cookie
+jwt.cookie.name=AUTH-TOKEN
 
 
 
