add Data Provider for test

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -46,3 +46,6 @@ jwt.expiration.ms=7200000
 # Name of the HttpOnly cookie
 jwt.cookie.name=AUTH-TOKEN
 
+# The base uri
+spring.base.url=http://localhost:9080
+
